# SprintApp

./: .cgcignore  .fastembed_cache  .gitignore  AGENTS.md  CLAUDE.md  mcp.json  package-lock.json  package.json  settings.gradle.kts  tsconfig.json
.codanna/: .project-id  settings.toml
.codanna/index/resolvers/: kotlin_resolution.json
.codanna/index/semantic/: metadata.json
.codanna/index/tantivy/: .managed.json  .tmpPRWuI7  meta.json
.cursor/: mcp.json
.cursor/rules/: jcodemunch.mdc
apps/android/.codanna/: .project-id  settings.toml
apps/android/app/: build.gradle.kts
apps/windows/: .gitignore  index-ts.scip  package-lock.json
apps/windows/.codanna/: .project-id  settings.toml
apps/windows/backend/: package.json  tsconfig.json
apps/windows/desktop/: app.py  build.py
apps/windows/desktop-tauri/: package.json
apps/windows/desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/windows/desktop-tauri/src-tauri/capabilities/: default.json
apps/windows/desktop-tauri/src-tauri/src/: lib.rs
apps/windows/ui/: package.json  vite.config.ts
scripts/: clean_ui.py  install-debug-apk.mjs  install-debug-devices-adb.mjs  install-release-apk.mjs  install-release-devices-adb.mjs  refactor_ui.py  release-android.mjs  release-windows.mjs
ui/: .env.example  README.md
ui/src/: App.tsx
ui/src/components/: DeviceCard.tsx  SystemDetails.tsx
windows/backend/saved-results/: run-2026-04-04.json
windows/backend/src/: server.ts
windows/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
windows/ui/: package.json
windows/ui/src/: App.tsx
(+82 files in other folders)
